--- a/github/workflows/playwright.yml
+++ b/github/workflows/playwright.yml
@@ -19,6 +19,7 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
+          env: ${ {ZEROSTEP }}
     - uses: actions/upload-artifact@v3
       if: always()
       with:
