--- a/github/workflows/playwright.yml
+++ b/github/workflows/playwright.yml
@@ -19,7 +19,8 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
-          env: ${ {ZEROSTEP }}
+      env:
+      ZEROSTEP_API_TOKEN: ${{ secrets.ZEROSTEP_TOKEN }}
     - uses: actions/upload-artifact@v3
       if: always()
       with:
