--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,7 +6,8 @@ on:
     branches: [ main, master ]
 
 env:
-  ZEROSTEP_API_TOKEN: ${{ secrets.ZEROSTEP_TOKEN }}
+  ZeroStep: ${{ secrets.ZEROSTEP_API_TOKEN }}
+
 
 jobs:
   test:
