--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,11 +21,11 @@ jobs:
       run: npx playwright install --with-deps
     - name: Install zeroStep Dependencies
       run: npm i @zerostep/playwright -D
-    - name: Run Playwright tests
-      run: npx playwright test
-    - uses: 
+      - shell: bash
         env: 
           ZeroStep: ${{ secrets.ZEROSTEP_API_TOKEN }}
+    - name: Run Playwright tests
+      run: npx playwright test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
