--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,8 +21,10 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Install zeroStep Dependencies
-      run: npm i @zerostep/playwright -D
+    - name: Install All Dependencies
+      run: yarn
+    # - name: Install zeroStep Dependencies
+    #   run: npm i @zerostep/playwright -D
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v3
