--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,14 +19,12 @@ jobs:
         node-version: 18
     - name: Install dependencies
       run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
     - name: Install All Dependencies
       run: yarn
     # - name: Install zeroStep Dependencies
     #   run: npm i @zerostep/playwright -D
     - name: Run Playwright tests
-      run: npx playwright test --headed
+      run: npx playwright test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
