--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@playwright/test": "^1.42.1"
   },
   "devDependencies": {
+    "@types/node": "^20.11.30",
     "@zerostep/playwright": "^0.1.5"
   }
 }
