--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,8 +19,14 @@ jobs:
         node-version: 18
     - name: Install dependencies
       run: npm ci
+    - name: Install Node Dependencies
+      run: npm i --save-dev @types/node
+    - name: Install All Dependencies
+      run: yarn
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    - name: Install ZeroStep Dependencies
+      run: npm i @zerostep/playwright -D
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v3
