--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,35 +1,35 @@
 name: Playwright Tests
+
 on:
   push:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
 
-env: 
-    ZEROSTEP_TOKEN: ${{ secrets.ZEROSTEP_TOKEN }}
-
 jobs:
   test:
-    timeout-minutes: 60
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - uses: actions/checkout@v4
+
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: 20.11.30
+
     - name: Install dependencies
       run: npm ci
-    - name: Install Node Dependencies
-      run: npm i --save-dev @types/node
-    - name: Install All Dependencies
-      run: yarn
+
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Install ZeroStep Dependencies
-      run: npm i @zerostep/playwright -D
+      run: npx @zerostep/playwright install --with-deps
+
     - name: Run Playwright tests
-      run: npx playwright test
-    - uses: actions/upload-artifact@v3
+      run: npx @zerostep/playwright test
+      env:
+        ZEROSTEP_TOKEN: ${{ secrets.ZEROSTEP_TOKEN }}
+
+    - uses: actions/upload-artifact@v4
       if: always()
       with:
         name: playwright-report
