--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -22,10 +22,10 @@ jobs:
       run: npm ci
 
     - name: Install Playwright Browsers
-      run: npx @zerostep/playwright install --with-deps
+      run: npx playwright install --with-deps
 
     - name: Run Playwright tests
-      run: npx @zerostep/playwright test
+      run: npx playwright test
       env:
         ZEROSTEP_TOKEN: ${{ secrets.ZEROSTEP_TOKEN }}
 
